<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/dp_10"
    tools:context=".view.fragment.detail.DetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dp_10"
            app:cardElevation="@dimen/dp_1">

            <ImageView
                android:id="@+id/image_poster"
                android:layout_width="@dimen/dp_200"
                android:layout_height="@dimen/dp_250"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/empty"
                android:scaleType="fitXY"
                tools:src="@drawable/ic_launcher_background" />
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@drawable/shape_area_overview"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_12"
        android:paddingBottom="@dimen/dp_16">

        <TextView
            android:id="@+id/text_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            tools:text="Movie title" />

        <TextView
            android:id="@+id/text_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/sp_12"
            android:textStyle="italic"
            tools:text="Movie title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:orientation="vertical"
            android:paddingStart="@dimen/dp_14"
            android:paddingEnd="@dimen/dp_14">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_overview"
                android:textSize="@dimen/sp_18" />

            <TextView
                android:id="@+id/text_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_10"
                android:ellipsize="end"
                android:lineSpacingExtra="@dimen/dp_2"
                android:maxLines="4"
                android:textSize="@dimen/sp_12"
                tools:text="Lorem sskskskks" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_26"
                android:baselineAligned="false"
                android:weightSum="8">

                <LinearLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_6"
                    android:layout_marginRight="@dimen/dp_6"
                    android:layout_weight="3"
                    android:background="@drawable/shape_border_button"
                    android:paddingTop="@dimen/dp_12"
                    android:paddingBottom="@dimen/dp_12">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/text_action_adventure"
                        android:textAllCaps="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_6"
                    android:layout_marginRight="@dimen/dp_6"
                    android:layout_weight="2"
                    android:background="@drawable/shape_border_button"
                    android:paddingTop="@dimen/dp_12"
                    android:paddingBottom="@dimen/dp_12">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/text_action"
                        android:textAllCaps="true" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/dp_0"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@drawable/shape_border_button"
                    android:paddingTop="@dimen/dp_12"
                    android:paddingBottom="@dimen/dp_12">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/text_science_fiction"
                        android:textAllCaps="true" />
                </LinearLayout>


            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</LinearLayout>